--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,13 +1,28 @@
-upstream backend {
-    server app_blue:80 max_fails=1 fail_timeout=5s;
-    server app_green:80 backup;
-}
+worker_processes auto;
 
-server {
-    listen 80;
-    location / {
-        proxy_pass http://backend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
+events { worker_connections 1024; }
+
+http {
+
+    upstream backend {
+        server app_blue:80 max_fails=1 fail_timeout=3s;
+        server app_green:80 backup;
+    }
+
+    proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+    proxy_next_upstream_tries 2;  # 1 retry (blue fails -> one retry goes to green)
+
+    server {
+        listen 80;
+
+        proxy_connect_timeout 1s;
+        proxy_send_timeout 2s;
+        proxy_read_timeout 2s;
+
+        location / {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
