--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BLUE_IMAGE=...
-GREEN_IMAGE=...
-ACTIVE_POOL=blue
 RELEASE_ID_BLUE=v1
 RELEASE_ID_GREEN=v2
+RELEASE_ID_BLUE=blue-demo-1
+RELEASE_ID_GREEN=green-demo-1
+ACTIVE_POOL=blue
