changeing server.py to app.js

--- a/app_blue/Dockerfile
+++ b/app_blue/Dockerfile
@@ -1,6 +1,16 @@
+# ./app_blue/Dockerfile (same for app_green)
 FROM node:18-alpine
+
 WORKDIR /app
-COPY app.js .
-ENV PORT=8080
+
+# Copy package files first for caching
+COPY package*.json ./
+
+RUN npm install --production
+
+# Copy app source
+COPY . .
+
 EXPOSE 8080
+
 CMD ["node", "app.js"]
