--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,6 @@
-# App images (provided by grader)
-BLUE_IMAGE=your-blue-image-here
-GREEN_IMAGE=your-green-image-here
-
-# Which pool is active by default
-ACTIVE_POOL=app_blue
-
-# Release identifiers
-RELEASE_ID_BLUE=1.0.0
-RELEASE_ID_GREEN=2.0.0
-
-# Internal port for each app
-PORT=8080
-
+   BLUE_IMAGE=your-blue-image:tag
+   GREEN_IMAGE=your-green-image:tag
+   ACTIVE_POOL=blue
+   RELEASE_ID_BLUE=release-blue-001
+   RELEASE_ID_GREEN=release-green-001
+   PORT=3000
