--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,17 @@ services:
     environment:
       - APP_POOL=blue
       - RELEASE_ID=${RELEASE_ID_BLUE}
-      - PORT=8080
+      - PORT=${PORT:-3000}
     ports:
-      - "8081:8080"
+      - "8081:${PORT:-3000}"
     networks:
       - app_network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:${PORT:-3000}/healthz"]
+      interval: 5s
+      timeout: 2s
+      retries: 3
+      start_period: 10s
 
   app_green:
     image: ${GREEN_IMAGE}
@@ -19,29 +25,37 @@ services:
     environment:
       - APP_POOL=green
       - RELEASE_ID=${RELEASE_ID_GREEN}
-      - PORT=8080
+      - PORT=${PORT:-3000}
     ports:
-      - "8082:8080"
+      - "8082:${PORT:-3000}"
     networks:
       - app_network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:${PORT:-3000}/healthz"]
+      interval: 5s
+      timeout: 2s
+      retries: 3
+      start_period: 10s
 
   nginx:
     image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
-      - ./nginx/entrypoint.sh:/entrypoint.sh:ro
-    entrypoint: ["sh", "/entrypoint.sh"]
-    environment:
-      - ACTIVE_POOL=${ACTIVE_POOL}
+    container_name: nginx_proxy
     depends_on:
       - app_blue
       - app_green
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx.conf.template:/etc/nginx/templates/nginx.conf.template:ro
+      - ./entrypoint.sh:/docker-entrypoint.d/entrypoint.sh:ro
+    environment:
+      - ACTIVE_POOL=${ACTIVE_POOL:-blue}
+      - PORT=${PORT:-3000}
     networks:
       - app_network
+    command: /bin/sh /docker-entrypoint.d/entrypoint.sh
 
 networks:
   app_network:
     driver: bridge
+
